Fix small alignment issue on left bar.

--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -17,7 +17,7 @@
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1024px) {
     .SideBar {
         padding: 2em 1.2em 0;
     }
